# proof-of-work-example

./: CMakeLists.txt  vcpkg.json
executable-example-linux86/: cns-blockchain
src/: main.cpp
